should fix #6296