@@ -18,9 +18,7 @@ package net.pms.util;
 
 import java.io.File;
 import java.net.URI;
-import java.nio.MappedByteBuffer;
 import java.nio.channels.FileChannel;
-import java.nio.file.Files;
 import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
@@ -36,8 +34,9 @@ public class ResourceIdentifier {
 
 	private static final Logger LOGGER = LoggerFactory.getLogger(ResourceIdentifier.class);
 
-	private static final int SMALL_BYTES_THRESHOLD = 1024 * 1024 * 100; // 100 MB
-	private static final int BIG_BYTES_THRESHOLD = Integer.MAX_VALUE;
+	private static final int SEGMENTS = 2;
+	private static final int SEGMENT_BYTES = 1024 * 128;
+	private static final long WHOLE_FILE_THRESHOLD = (long) SEGMENTS * SEGMENT_BYTES;
 
 	private static final String LOG_RUID_CREATE = "Creating ruid ({}) for \"{}\"";
 	private static final String LOG_RUID_RESULTS = "RUID for \"{}\": {}";
@@ -63,15 +62,7 @@ public class ResourceIdentifier {
 		}
 		File file = getFile(uri);
 		if (file != null && file.exists() && file.isFile()) {
-			long fileSize = file.length();
-			if (fileSize < SMALL_BYTES_THRESHOLD) {
-				return getSmallFileIdentifier(file, fileSize);
-			}
-			if (fileSize <= BIG_BYTES_THRESHOLD) {
-				return getBigFileIdentifier(file);
-			} else {
-				return getVeryBigFileIdentifier(file);
-			}
+			return getFileIdentifier(file);
 		}
 		return getTextIdentifier(uri);
 	}
@@ -93,125 +84,40 @@ public class ResourceIdentifier {
 	}
 
 	/**
-	 * Calculates the XXH3 hash and returns the value as a 16 character hex
-	 * string. File has to be smaller than 2 GB for correct hashing.
+	 * Calculates the XXH3 hash of a file and returns the value as hex string.
 	 *
-	 * This method can be removed, when switching to Java 21 or above (see comment below).
+	 * Files larger than WHOLE_FILE_THRESHOLD are identified by their size plus #SEGMENTS, the first one
+	 * at the beginning, the last one at the end and the others spread evenly in between.
 	 *
 	 * @param file the file to identify
 	 * @return the pseudo unique file identifier.
-	 * @throws IOException
 	 */
-	private static String getBigFileIdentifier(final File file) {
+	private static String getFileIdentifier(final File file) {
 		String pathname = file.getAbsolutePath();
 		try (FileChannel fileChannel = FileChannel.open(file.toPath(), StandardOpenOption.READ)) {
-			MappedByteBuffer mbb = fileChannel.map(FileChannel.MapMode.READ_ONLY, 0, fileChannel.size());
-			String ruid = Long.toHexString(LongHashFunction.xx3().hashBytes(mbb));
-			LOGGER.trace(LOG_RUID_RESULTS, pathname, ruid);
-			return ruid;
-		} catch (Exception ex) {
-			LOGGER.error(LOG_RUID_ERROR, "big file", pathname);
-			LOGGER.trace("", ex);
-		}
-		return null;
-	}
-
-	/**
-	 * Calculates the XXH3 hash and returns the value as a 16 character hex for files larger than 2 GB.
-	 * Will process the file in chunks of 2 GB to avoid memory issues.
-	 *
-	 * This method can be removed, when switching to Java 21 or above (see comment below).
-	 *
-	 * @param file
-	 * @return
-	 */
-	private static String getVeryBigFileIdentifier(final File file) {
-		String pathname = file.getAbsolutePath();
-		final long fileSize = file.length();
-		final long maxChunkSize = Integer.MAX_VALUE;
-		long acc = LongHashFunction.xx3().hashLongs(new long[]{fileSize, maxChunkSize});
-		long offset = 0L;
-		long chunkIndex = 0L;
-		try (FileChannel fileChannel = FileChannel.open(file.toPath(), StandardOpenOption.READ)) {
-			while (offset < fileSize) {
-				long remaining = fileSize - offset;
-				long chunkSize = Math.min(remaining, maxChunkSize);
-				MappedByteBuffer mbb = fileChannel.map(FileChannel.MapMode.READ_ONLY, offset, chunkSize);
-				long chunkHash = LongHashFunction.xx3().hashBytes(mbb);
-				acc = LongHashFunction.xx3().hashLongs(new long[]{acc, chunkHash, chunkSize, chunkIndex});
-				offset += chunkSize;
-				chunkIndex++;
+			LongHashFunction xx3 = LongHashFunction.xx3();
+			long size = fileChannel.size();
+			long hash;
+			if (size == 0) {
+				hash = xx3.hashVoid();
+			} else if (size <= WHOLE_FILE_THRESHOLD) {
+				hash = xx3.hashBytes(fileChannel.map(FileChannel.MapMode.READ_ONLY, 0, size));
+			} else {
+				long[] hashes = new long[SEGMENTS + 1];
+				hashes[0] = size;
+				long lastOffset = size - SEGMENT_BYTES;
+				for (int i = 0; i < SEGMENTS; i++) {
+					long offset = lastOffset * i / (SEGMENTS - 1);
+					hashes[i + 1] = xx3.hashBytes(fileChannel.map(FileChannel.MapMode.READ_ONLY, offset, SEGMENT_BYTES));
+				}
+				hash = xx3.hashLongs(hashes);
 			}
-			String ruid = Long.toHexString(acc);
-			LOGGER.trace(LOG_RUID_RESULTS, pathname, ruid);
-			return ruid;
-		} catch (Exception ex) {
-			LOGGER.error(LOG_RUID_ERROR, "very big file", pathname);
-			LOGGER.trace("", ex);
-		}
-		return null;
-	}
-
-	// Use the method below when Java 21 or above is used, as it can handle files larger than 2 GB without chunking.
-	// The methods "getVeryBigFileIdentifier" and "getBigFileIdentifier" above this comment can be removed at that point and replaced by
-	// the "getBigFileIdentifier" below this comment. The "BIG_BYTES_THRESHOLD" constant can also be removed, as it will no longer be needed.
-	//
-	// Action to do with usage of JDK 21 LTS :
-	// =======================================================
-	// We still need to add the "--enable-preview" flag to the runtime, because the
-	// "Foreign Function & Memory (FFM) API" used in the method below is still in preview in JDK 21. Replace the option
-	// "--add-opens java.base/sun.nio.ch=ALL-UNNAMED" with "--enable-preview" in the pom.xml, UMS.launch and Docker files.
-	//
-	// Action to do with usage of JDK 25 LTS or above :
-	// =======================================================
-	// Remove the option "--add-opens java.base/sun.nio.ch=ALL-UNNAMED" in the pom.xml, UMS.launch and Docker files.
-
-	/**
-	 * Calculates the XXH3 hash and returns the value as a 16 character hex. It can be applied to files larger than 2 GB, as
-	 * it uses the Foreign Function & Memory (FFM) API to map the file into memory.
-	 *
-	 * @param file the file to identify
-	 * @return the pseudo unique file identifier.
-	 * @throws IOException
-	 */
-	/*
-	private static String getBigFileIdentifier(final File file) {
-		try (Arena arena = Arena.ofConfined(); FileChannel channel = FileChannel.open(file.toPath(), StandardOpenOption.READ)) {
-
-			MemorySegment segment = channel.map(FileChannel.MapMode.READ_ONLY, 0, channel.size(), arena);
-
-			long hash = LongHashFunction.xx3().hashMemory(segment.address(), segment.byteSize());
-
 			String ruid = Long.toHexString(hash);
-			LOGGER.trace(LOG_RUID_RESULTS, file.getAbsolutePath(), ruid);
-			return ruid;
-		} catch (Exception ex) {
-			LOGGER.error(LOG_RUID_ERROR, "big file", file.getAbsolutePath());
-			LOGGER.trace("", ex);
-		}
-		return null;
-	} */
-
-
-	/**
-	 * Calculates the XXH3 hash and returns the value as a 16 character hex
-	 * string.
-	 *
-	 * Will process the entire file bytes.
-	 *
-	 * @param file the file to identify
-	 * @return the pseudo unique file identifier.
-	 * @throws IOException
-	 */
-	private static String getSmallFileIdentifier(final File file, final long fileSize) {
-		String pathname = file.getAbsolutePath();
-		try {
-			String ruid = Long.toHexString(LongHashFunction.xx3().hashBytes(Files.readAllBytes(file.toPath())));
 			LOGGER.trace(LOG_RUID_RESULTS, pathname, ruid);
 			return ruid;
-		} catch (Exception e) {
-			LOGGER.error(LOG_RUID_ERROR, "small file", pathname);
-			LOGGER.trace("", e);
+		} catch (Exception ex) {
+			LOGGER.error(LOG_RUID_ERROR, "file", pathname);
+			LOGGER.trace("", ex);
 		}
 		return null;
 	}
